<resources>
    <string name="app_name">car_game</string>
    <string name="heart_1">heart_1</string>
    <string name="heart_2" />
    <string name="heart_3" />
    <string name="heart" />
    <string name="cell">cell</string>
    <string name="obstacle_0_0" />
    <string name="obstacle_0_1" />
    <string name="obstacle_0_2" />
    <string name="obstacle_1_0" />
    <string name="obstacle_1_1" />
    <string name="obstacle_1_2" />
    <string name="obstacle_2_0" />
    <string name="obstacle_2_1" />
    <string name="obstacle_2_2" />
    <string name="obstacle_3_0" />
    <string name="obstacle_3_1" />
    <string name="obstacle_3_2" />
    <string name="obstacle_4_0" />
    <string name="obstacle_4_1" />
    <string name="obstacle_4_2" />
    <string name="obstacle_5_0" />
    <string name="obstacle_5_1" />
    <string name="obstacle_5_2" />
    <string name="car_0" />
    <string name="car_1" />
    <string name="car_2" />
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="obstacle_0_3">obstacle_0_3</string>
    <string name="obstacle_0_4">obstacle_0_4</string>
    <string name="obstacle_1_3">obstacle_1_3</string>
    <string name="obstacle_1_4">obstacle_1_4</string>
    <string name="obstacle_2_3">obstacle_2_3</string>
    <string name="obstacle_2_4">obstacle_2_4</string>
    <string name="obstacle_3_3">obstacle_3_3</string>
    <string name="obstacle_3_4">obstacle_3_4</string>
    <string name="obstacle_4_3">obstacle_4_3</string>
    <string name="obstacle_4_4">obstacle_4_4</string>
    <string name="obstacle_5_3">obstacle_5_3</string>
    <string name="obstacle_5_4">obstacle_5_4</string>
    <string name="car_3">car_3</string>
    <string name="car_4">car_4</string>
    <string name="obstacle_6_0">obstacle_6_0</string>
    <string name="obstacle_6_1">obstacle_6_1</string>
    <string name="obstacle_6_2">obstacle_6_2</string>
    <string name="obstacle_6_3">obstacle_6_3</string>
    <string name="obstacle_6_4">obstacle_6_4</string>
    <string name="obstacle_7_0">obstacle_7_0</string>
    <string name="obstacle_7_1">obstacle_7_1</string>
    <string name="obstacle_7_2">obstacle_7_2</string>
    <string name="obstacle_7_3">obstacle_7_3</string>
    <string name="obstacle_7_4">obstacle_7_4</string>
    <string name="obstacle_8_0">obstacle_8_0</string>
    <string name="obstacle_8_1">obstacle_8_1</string>
    <string name="obstacle_8_2">obstacle_8_2</string>
    <string name="obstacle_8_3">obstacle_8_3</string>
    <string name="obstacle_8_4">obstacle_8_4</string>
    <string name="obstacle_9_0">obstacle_9_0</string>
    <string name="obstacle_9_1">obstacle_9_1</string>
    <string name="obstacle_9_2">obstacle_9_2</string>
    <string name="obstacle_9_3">obstacle_9_3</string>
    <string name="obstacle_9_4">obstacle_9_4</string>
    <string name="obstacle_10_0">obstacle_10_0</string>
    <string name="obstacle_10_1">obstacle_10_1</string>
    <string name="obstacle_10_2">obstacle_10_2</string>
    <string name="obstacle_10_3">obstacle_10_3</string>
    <string name="obstacle_10_4">obstacle_10_4</string>
    <string name="obstacle_11_0">obstacle_11_0</string>
    <string name="obstacle_11_1">obstacle_11_1</string>
    <string name="obstacle_11_2">obstacle_11_2</string>
    <string name="obstacle_11_3">obstacle_11_3</string>
    <string name="obstacle_11_4">obstacle_11_4</string>
    <string name="obstacle_12_0">obstacle_12_0</string>
    <string name="obstacle_12_1">obstacle_12_1</string>
    <string name="obstacle_12_2">obstacle_12_2</string>
    <string name="obstacle_12_3">obstacle_12_3</string>
    <string name="obstacle_12_4">obstacle_12_4</string>
    <string name="obstacle_13_0">obstacle_13_0</string>
    <string name="obstacle_13_1">obstacle_13_1</string>
    <string name="obstacle_13_2">obstacle_13_2</string>
    <string name="obstacle_13_3">obstacle_13_3</string>
    <string name="obstacle_13_4">obstacle_13_4</string>
    <string name="obstacle_14_0">obstacle_14_0</string>
    <string name="obstacle_14_1">obstacle_14_1</string>
    <string name="obstacle_14_2">obstacle_14_2</string>
    <string name="obstacle_14_3">obstacle_14_3</string>
    <string name="obstacle_14_4">obstacle_14_4</string>
    <string name="obstacle_15_0">obstacle_15_0</string>
    <string name="obstacle_15_1">obstacle_15_1</string>
    <string name="obstacle_15_2">obstacle_15_2</string>
    <string name="obstacle_15_3">obstacle_15_3</string>
    <string name="obstacle_15_4">obstacle_15_4</string>
</resources>