<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFF"
    android:layoutDirection="ltr"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:id="@+id/layout_hearts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="8dp"
        android:orientation="horizontal"
        android:contentDescription="@string/heart"
        >

        <ImageView
            android:id="@+id/heart_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart_1"
            />
        <ImageView
            android:id="@+id/heart_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart_2"

            />
        <ImageView
            android:id="@+id/heart_3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart_3"

            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_game_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="horizontal">
                <ImageView android:id="@+id/obstacle_0_0" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_0_0" />
                <ImageView android:id="@+id/obstacle_0_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_0_1" />
                <ImageView android:id="@+id/obstacle_0_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_0_2" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="horizontal">
                <ImageView android:id="@+id/obstacle_1_0" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_1_0" />
                <ImageView android:id="@+id/obstacle_1_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_1_1" />
                <ImageView android:id="@+id/obstacle_1_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_1_2" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="horizontal">
                <ImageView android:id="@+id/obstacle_2_0" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_2_0" />
                <ImageView android:id="@+id/obstacle_2_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_2_1" />
                <ImageView android:id="@+id/obstacle_2_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_2_2" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="horizontal">
                <ImageView android:id="@+id/obstacle_3_0" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_3_0" />
                <ImageView android:id="@+id/obstacle_3_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_3_1" />
                <ImageView android:id="@+id/obstacle_3_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_3_2" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="horizontal">
                <ImageView android:id="@+id/obstacle_4_0" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_4_0" />
                <ImageView android:id="@+id/obstacle_4_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_4_1" />
                <ImageView android:id="@+id/obstacle_4_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_4_2" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:orientation="horizontal">
                <ImageView android:id="@+id/obstacle_5_0" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_5_0" />
                <ImageView android:id="@+id/obstacle_5_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_5_1" />
                <ImageView android:id="@+id/obstacle_5_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:contentDescription="@string/obstacle_5_2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/car_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/car"
                    android:visibility="invisible"
                    android:contentDescription="@string/car_0" />

                <ImageView
                    android:id="@+id/car_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/car"
                    android:visibility="visible"
                    android:contentDescription="@string/car_1" />

                <ImageView
                    android:id="@+id/car_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/car"
                    android:visibility="invisible"
                    android:contentDescription="@string/car_2" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:layoutDirection="ltr"
        >


        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/left_arrow"
            android:contentDescription="@string/left"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/right"
            />

    </LinearLayout>

</LinearLayout>